完成用户注册登录前，获取验证码功能开发