@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.rookie.stack</groupId>
-        <artifactId>rookie-im-server</artifactId>
+        <artifactId>rookie-im-tools</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath> <!-- 确保路径正确 -->
     </parent>
 
     <artifactId>rookie-message-push-starter</artifactId>
@@ -48,7 +48,6 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
